<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:id="@+id/header_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/locodrive_logo_text"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toTopOf="@id/tv_change_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        app:layout_constraintVertical_bias="0.33">

        <TextView
            android:id="@+id/textView"
            style="@style/MainHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_locodrive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/BodyBoldDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_your_registered_mobile_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="12dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:textAppearance="@style/BodyLight"
            android:textColorHint="@color/lightgrey"
            android:background="@drawable/bg_edittext"
            android:textColor="@color/dark"
            android:gravity="start"
            android:hint="@string/mobile_number_hint"
            android:inputType="numberDecimal"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/error_message"
            android:layout_height="wrap_content"
            style="@style/ErrorMessage"
            android:layout_marginStart="30dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
            tools:text="Invalid"
            android:visibility="invisible"
            android:layout_marginLeft="30dp">
        </TextView>

        <Button
            android:id="@+id/button_get_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/locobutton_background"
            android:text="@string/get_otp_text"
            android:textAllCaps="true"
            android:textAppearance="@style/ButtonTittle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:id="@+id/number_login_progressBar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_change_language"
        style="@style/TextlinkBlue"
        android:layout_width="132dp"
        android:gravity="center"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/language_string" />

</androidx.constraintlayout.widget.ConstraintLayout>