...
    <string name="tab_text_trip">Trips</string>
    <string name="tab_text_expense">Expenses</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_locodrive">Welcome to LocoDrive</string>
    <string name="something_went_wrong">Something Went Wrong!!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="blank_number_error_message">Mobile number field can’t be blank</string>
    <string name="invalid_number_error_message">Mobile number is not valid</string>
    <string name="start_trip_button_text">start trip</string>
    <string name="transporter_name">Transporter Name</string>
    <string name="current_salary">Current Salary</string>
    <string name="address_text">Address</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="change_language_text">Change Language</string>
...
